--- a/views/page/admin/list-akun.ejs
+++ b/views/page/admin/list-akun.ejs
@@ -53,7 +53,7 @@
         .button-container button {
             padding: 10px 20px;
             border: none;
-            background-color: #e0e0e0;
+            background-color: rgb(235, 243, 232);
             cursor: pointer;
             border-radius: 5px;
             transition: background-color 0.3s;
@@ -61,8 +61,8 @@
 
         .button-container button.active,
         .button-container button:hover {
-            background-color: #4caf50;
-            color: white;
+            background-color: rgb(134, 167, 137);
+            color: rgb(235, 243, 232);
         }
 
         .user-list {
@@ -76,10 +76,8 @@
             align-items: center;
             justify-content: space-between;
             padding: 8px;
-            /* Mengurangi padding */
             margin-bottom: 8px;
-            /* Menambahkan margin bawah */
-            background-color: #e8f5e9;
+            background-color: rgb(235, 243, 232);
             border-radius: 5px;
         }
 
