--- a/views/page/admin/riwayat.ejs
+++ b/views/page/admin/riwayat.ejs
@@ -5,20 +5,64 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Riwayat Pengantaran</title>
     <link rel="icon" href="img/logo-icon.png" type="image/x-icon">
-    <link rel="stylesheet" href="css/custom-style.css">
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-    />
+    <link rel="stylesheet" href="/css/custom-style.css">
+    <link rel="stylesheet" href="/css/riwayat.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
 </head>
 <body>
-    <div class="header">
-        <div class="back-btn">
-            <a
-            onclick="goBack()">
-                <i class="fas fa-arrow-left fa-lg"></i><span class="btn-text">Kembali</span>
-            </a>
+    <div class="container">
+        <div class="header">
+            <div class="back-btn">
+                <a href="/admin">
+                    <i class="fas fa-arrow-left fa-lg"></i><span class="btn-text">Kembali</span>
+                </a>
+            </div>
+        </div>
+        <div class="content">
+            <aside class="sidebar">
+                <h1>Riwayat</h1>
+                <div class="date">
+                    <input type="date" id="filterDate" value="<%= filterDate || '' %>">
+                </div>
+                <div class="kurir-list">
+                    <% kurirs.forEach(kurir => { %>
+                        <div class="kurir <%= selectedKurir && selectedKurir.id_kurir === kurir.id_kurir ? 'selected' : '' %>" data-id="<%= kurir.id_kurir %>">
+                            <p class="kurir-name"><%= kurir.nama %></p>
+                        </div>
+                    <% }) %>
+                </div>
+            </aside>
+            <div class="line-center"></div>
+            <div class="kurir-details">
+                <h3>Kurir yang mengirimkan paket</h3>
+                <div class="kurir-info">
+
+                        <i class="fas fa-user"></i><p class="kurir-name"><%= selectedKurir ? selectedKurir.nama : '' %></p><p class="kurir-phone"><%= selectedKurir ? selectedKurir.handphone : '' %></p>
+
+                </div>
+                <div><h3>List Status Pengiriman Paket</h3></div>
+                <div class="packages-list">
+                    <% if (packages && packages.length > 0) { %>
+                        <% packages.forEach(pkg => { %>
+                            <div class="package">
+                                <p>Nomor Resi: <%= pkg.nomor_resi %></p>
+                                <p>Alamat: <%= pkg.Alamat_Tujuan %> | Penerima: <%= pkg.Nama_Penerima %></p>
+                                <p>Status Pengiriman: 
+                                    <% if (pkg.status_pengiriman === 'Selesai') { %>
+                                        <span class="status selesai">Selesai</span>
+                                    <% } else { %>
+                                        <span class="status gagal">Gagal</span>
+                                    <% } %>
+                                </p>
+                            </div>
+                        <% }) %>
+                    <% } else { %>
+                        <p>Tidak ada paket ditemukan untuk kurir ini</p>
+                    <% } %>
+                </div>
+            </div>
         </div>
     </div>
+    <script src="/script/main.js" type="module"></script>
 </body>
 </html>
