--- a/views/page/agen/list-paket.ejs
+++ b/views/page/agen/list-paket.ejs
@@ -2,97 +2,205 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>List Paket</title>
-    <link rel="stylesheet" href="css/pendaftaran-styles.css" />
-    <link rel="stylesheet" href="css/custom-style.css" />
-    <script src="script/admin-script.js"></script>
-    <script src="script/fetch.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Halaman Karyawan Gedung</title>
+    <link rel="icon" href="/img/logo-icon.png" type="image/x-icon">
+    <link rel="stylesheet" href="/css/custom-style.css">
+    <link rel="stylesheet" href="/css/karyawan-style.css">
+    <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+
+        /* .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: #fff;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+            overflow: hidden;
+        } */
+
+        .header {
+            display: flex;
+            align-items: center;
+            padding: 10px 0;
+        }
+
+        .header h1 {
+            flex-grow: 1;
+            font-size: 24px;
+        }
+
+        .header a {
+            text-decoration: none;
+            color: #333;
+        }
+
+        .button-container {
+            display: flex;
+            gap: 10px;
+            margin-bottom: 20px;
+        }
+
+        .button-container button {
+            padding: 10px 20px;
+            border: none;
+            background-color: #e0e0e0;
+            cursor: pointer;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+
+        .button-container button.active,
+        .button-container button:hover {
+            background-color: #4caf50;
+            color: white;
+        }
+
+        .user-list {
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+        }
+
+        .user-list li {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 8px;
+            /* Mengurangi padding */
+            margin-bottom: 8px;
+            /* Menambahkan margin bawah */
+            background-color: #e8f5e9;
+            border-radius: 5px;
+        }
+
+        .user-list li span {
+            font-size: 18px;
+        }
+
+        .user-list li button {
+            background: none;
+            border: none;
+            color: red;
+            cursor: pointer;
+        }
+    </style>
+    <script src="/script/admin-script.js" defer></script>
 </head>
 
 <body>
     <div class="header">
         <div class="back-btn">
-            <a onclick="goBack()">
+            <a href="/agen">
                 <i class="fas fa-arrow-left fa-lg"></i><span class="btn-text">Kembali</span>
             </a>
         </div>
     </div>
-    
-    <h1>Daftar Pengiriman</h1>
-    <p>User: <%= user.email %>
-    </p>
+    <main>
+        <div class="container">
+            <aside class="sidebar">
+              <h2>List Data Pengiriman Paket</h2>
+              <div class="package-list">
+                <% deliveries.forEach(pkg=> { %>
+                  <div class="package-item">
+                    <a href="/deliverie/<%= pkg.ID_Data_Penerimaan_Paket %>">
+                      <span class="noresi">No. Resi: <%= pkg.nomor_resi %></span><br>
+                      <span class="label">Kecamatan :</span> <span class="name">
+                        <%= pkg.kecamatan %>
+                      </span> | <span class="label"> Kelurahan :</span> <span class="name">
+                        <%= pkg.kelurahan %>
+                      </span> | <span class="label"> Alamat Tujuan : </span> <span class="name">
+                        <%= pkg.Alamat_Tujuan %>
+                      </span>
+                    </a>
+                  </div>
+                  <% }) %>
+              </div>
+            </aside>
+            <div class="line-center"></div>
+            <section class="details">
+              <% if (selectedDeliverie) { %>
+                <h2>Data Paket</h2>
+                <div class="line-bottom"></div>
+                <div class="detail-item">
+                  <span class="detail">No. Resi</span> :  <span class="value"> 
+                    <%= selectedDeliverie.nomor_resi %>
+                  </span>
+                </div>
+                <div class="line-bottom"></div>
+                <div class="detail-item">
+                  <span class="detail">Nama Pengirim</span> : <span class="value">
+                    <%= selectedDeliverie.Nama_Pengirim %>
+                  </span>
+                </div>
+                <div class="detail-item">
+                  <span class="detail">No. HP Pengirim</span> : <span class="value">
+                    <%= selectedDeliverie.No_HP_Pengirim %>
+                  </span>
+                </div>
+                <div class="detail-item">
+                  <span class="detail">Deskripsi</span> : <span class="value">
+                    <%= selectedDeliverie.Deskripsi %>
+                  </span>
+                </div>
+                <div class="detail-item">
+                  <span class="detail">Berat (kg)</span> : <span class="value">
+                    <%= selectedDeliverie.Berat %>
+                  </span>
+                </div>
+                <div class="detail-item">
+                  <span class="detail">Dimensi (cm)</span> : <span class="value">
+                    <%= selectedDeliverie.Dimensi %>
+                  </span>
+                </div>
+                <div class="detail-item">
+                  <span class="detail">Jumlah Kiriman</span> : <span class="value">
+                    <%= selectedDeliverie.Jumlah_Kiriman %>
+                  </span>
+                </div>
+                
+                <div class="line-bottom"></div>
+                <div class="detail-item">
+                  <span class="detail">Nama Penerima</span> : <span class="value">
+                    <%= selectedDeliverie.Nama_Penerima %>
+                  </span>
+                </div>
+                <div class="detail-item">
+                  <span class="detail">No. HP Penerima</span> : <span class="value">
+                    <%= selectedDeliverie.No_HP_Penerima %>
+                  </span>
+                </div>
+                <div class="detail-item">
+                  <span class="detail">Alamat</span> : <span class="value">
+                    <%= selectedDeliverie.Alamat_Tujuan %>
+                  </span>
+                </div>
+                <div class="detail-item">
+                  <span class="detail">Kecamatan</span> : <span class="value">
+                    <%= selectedDeliverie.kecamatan %>
+                  </span>
+                </div>
+                <div class="detail-item">
+                  <span class="detail">Kelurahan</span> : <span class="value">
+                    <%= selectedDeliverie.kelurahan %>
+                  </span>
+                </div>
+                <% } else { %>
+                  <h2>Silakan pilih paket dari daftar di sebelah kiri</h2>
+                  <% } %>
+            </section>
+        
+          </div>
+    </main>
 
-    <table border="1">
-        <thead>
-            <tr>
-                <th>ID</th>
-                <th>Nama Pengirim</th>
-                <th>No HP Pengirim</th>
-                <th>Deskripsi</th>
-                <th>Berat</th>
-                <th>Dimensi</th>
-                <th>Jumlah Kiriman</th>
-                <th>Nama Penerima</th>
-                <th>No HP Penerima</th>
-                <th>Alamat Tujuan</th>
-                <th>Kecamatan</th>
-                <th>Kelurahan</th>
-                <th>Nomor Resi</th>
-                <th>Created At</th>
-            </tr>
-        </thead>
-        <tbody>
-            <% deliveries.forEach(function(delivery) { %>
-                <tr>
-                    <td>
-                        <%= delivery.ID_Data_Penerimaan_Paket %>
-                    </td>
-                    <td>
-                        <%= delivery.Nama_Pengirim %>
-                    </td>
-                    <td>
-                        <%= delivery.No_HP_Pengirim%>
-                    </td>
-                    <td>
-                        <%= delivery.Deskripsi %>
-                    </td>
-                    <td>
-                        <%= delivery.Berat %>
-                    </td>
-                    <td>
-                        <%= delivery.Dimensi %>
-                    </td>
-                    <td>
-                        <%= delivery.Jumlah_Kiriman %>
-                    </td>
-                    <td>
-                        <%= delivery.Nama_Penerima %>
-                    </td>
-                    <td>
-                        <%= delivery.No_HP_Penerima %>
-                    </td>
-                    <td>
-                        <%= delivery.Alamat_Tujuan %>
-                    </td>
-                    <td>
-                        <%= delivery.kecamatan %>
-                    </td>
-                    <td>
-                        <%= delivery.kelurahan %>
-                    </td>
-                    <td>
-                        <%= delivery.nomor_resi %>
-                    </td>
-                    <td>
-                        <%= delivery.createdAt%>
-                    </td>
-                </tr>
-                <% }); %>
-        </tbody>
-    </table>
 </body>
 
 </html>
