--- a/views/page/admin/riwayat.ejs
+++ b/views/page/admin/riwayat.ejs
@@ -36,9 +36,9 @@
             <div class="kurir-details">
                 <h3>Kurir yang mengirimkan paket</h3>
                 <div class="kurir-info">
-
-                        <i class="fas fa-user"></i><p class="kurir-name"><%= selectedKurir ? selectedKurir.nama : '' %></p><p class="kurir-phone"><%= selectedKurir ? selectedKurir.handphone : '' %></p>
-
+                    <i class="fas fa-user"></i>
+                    <p class="kurir-name"><%= selectedKurir ? selectedKurir.nama : '' %></p>
+                    <p class="kurir-phone"><%= selectedKurir ? selectedKurir.handphone : '' %></p>
                 </div>
                 <div><h3>List Status Pengiriman Paket</h3></div>
                 <div class="packages-list">
