--- a/views/page/admin/list-akun.ejs
+++ b/views/page/admin/list-akun.ejs
@@ -12,6 +12,18 @@
     <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <style>
+        * {
+            padding: 0;
+            margin: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
+        }
+
         .container {
             display: flex;
             flex-direction: column;
@@ -68,7 +80,7 @@
             padding: 20px 0;
             border: none;
             margin-bottom: 10px;
-            height: 300px;
+            height: 290px;
         }
 
         .user-list::-webkit-scrollbar {
